--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "abeds-react-portfolio",
-  "version": "0.1.0",
+  "homepage": "https://abdelrahmanahmed605.github.io/abeds-react-portfolio/",
+  "description": "This portfolio page is created with a React environment to showcase Abdelrahman's skills and talents and highlights of his biggest projects to date",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
@@ -17,6 +19,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -38,5 +42,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "keywords": [
+    "resume",
+    "skills",
+    "react",
+    "full stack",
+    "developer",
+    "resume"
+  ],
+  "author": "Abdelrahman Ahmed",
+  "license": "MIT",
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
